client/src/components/Styles/projects.css
/*
  Syles for project-related components, such as:
  - Panels (on Discover page)
  - Project Creator and Editor Popup
  - Project page
  - Project page carousel
  - My Projects page
*/

/*
/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\
------------------------------------------------------------------------------------------------
Project Panel component style rules
- Flexbox of project panels used in discover page and on user pages
------------------------------------------------------------------------------------------------
\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/
*/
/* #region project-panel */

#discover-panel-box {
  margin: 0 50px 50px;
  display: flex;
  justify-content: center;
}

@media only screen and (max-width: 700px) {
  #discover-panel-box {
    margin: 0 20px 20px;
  }
}

.project-panel-box {
  display: grid;
  grid-template-columns: repeat(auto-fill, minmax(min(clamp(250px,30vw,350px), 80vw), 1fr));
  justify-content: space-between;
  align-content: start;
  gap: 20px;
  width: 100%;
  /* margin: 0 50px 50px 50px; */
}

.project-panel {
  height: auto;
  /* commenting max width out.
  Forcing width may mess with rendering calculations, causing uneven/unaligned project panel rows.
  If max width is necessary, calculations need to be updated for it to work properly*/
  /* max-width: 420px; */
  border: none;
  border-radius: 10px;
  background-color: var(--header-color);
  display: flex;
  position: relative;
  max-width: 750px;

  img {
    /* using 'object-fit:cover' risks cutting off important parts of the image */
    /* recommended using 'object-fit:contain' if image cutoff is undesired*/
    object-fit: cover;
    /* max-height: 200px; */
    height: auto;
    width: 100%;
    border-radius: 10px;
    align-self: center;
    background-color: var(--header-color);
  }

  .project-panel-hover {
    visibility: hidden;
    opacity: 0;
    transition: visibility 0s, opacity 0.2s;
    z-index: 15;
  }
}

.project-panel:hover {
  transition: 0.2s;
  border-radius: 10px 10px 0 0;
  cursor: pointer;
  /* box-shadow: 2px 2px 10px 2px var(--shadow-color); */
  filter: drop-shadow(2px 2px 10px var(--shadow-color));
  z-index: 2;

  img {
    border-radius: 10px 10px 0 0;
  }

  .project-panel-hover {
    visibility: visible;
    opacity: 1;
    cursor: pointer;
  }
}

.project-panel-hover {
  border-radius: 0 0 10px 10px;
  background-color: var(--bg-color);
  /* box-shadow: 2px 2px 10px 2px var(--shadow-color); */
  color: var(--main-text);
  position: absolute;
  height: auto;
  /* min-width: 420px; */
  width: 100%;
  top: 100%;
  pointer-events: none;
  visibility: visible;
  transition: visibility 0.2s;

  /* bottom: 0; */
  /* left: 0; */
  /* right: 0; */
  display: flex;
  flex-direction: column;
  justify-content: start;
  text-align: left;

  img {
    /* width: 100%; */
    height: auto;
    /* align-self: flex-start; */
    /* background-color: var(--primary-color); */
    border-radius: 10px 10px 0 0;
  }

  .project-title-likes {
    padding: 0 20px;
    margin: 14px 0;
    display: flex;
    flex-direction: row;
    justify-content: space-between;

    h2 {
      padding: 0;
      margin: 0;
    }

    .project-likes {
      display: flex;
      flex-direction: row;
      gap: 8px;
      align-items: center;

      .follow-amt {
        margin: 0;
        font-size: 0.875rem;
        font-weight: 400;
        color: var(--primary-color);
        height: fit-content;
        transition: 0.2s;
      }

      .follow-amt.following {
        color: #f14f76;
      }

      #heart-empty {
        stroke: #F14F76;
      }

      #heart-empty:hover,
      #heart-filled:hover {
        transform: scale(1.2);
      }
    }
  }

  /* Name */
  h2 {
    padding: 0 20px;
    margin: 14px 0;
    font-size: 1.375rem;
    font-weight: 700;
    color: var(--primary-color);
    line-height: normal;
  }

  /* Major */
  h3 {
    padding: 0 20px;
    margin: 0;
    color: var(--main-text);
    font-size: 1rem;
    font-weight: 400;
    line-height: normal;
  }

  /* Quote */
  #quote {
    padding: 0 20px;
    margin: 14px 0;
    color: var(--main-text);
    font-size: 0.875rem;
    font-weight: 400;
    line-height: 28px;

    overflow-y: scroll;
  }
}

#project-panel-tags {
  display: flex;
  flex-wrap: wrap;
  gap: 10px;
  padding: 0 20px;
}

.project-contributor:hover {
  cursor: pointer;
}

/* IPAD/TABLET Hover support for touch-screen devices that specifically are not computers */
@media only screen and (any-hover: none) {

  /* In mobile version hover panel is always visible
     position is static so the grid uses the size of the hover panel
     original thumbnail image is hidden to avoid duplicate from hover panel*/
  .project-panel {
    height: auto;
    display: grid;
    flex-direction: column;
    align-self: baseline;
    z-index: 0;
    img {
      border-radius: 10px 10px 0px 0px;
      box-shadow: 2px 2px 10px 2px var(--shadow-color);

    }

    .project-panel-hover {
      visibility: visible;
      opacity: 1;
      position: static;
      height: auto;
      z-index: 1;
    }
  }

}

@media only screen and (max-width: 700px) {

  .projects-banner-outer {
    display: none;
  }
}
/* ... */

